<?xml version="1.0"?>
<package format="3">
  <name>service_interface</name>
  <version>0.0.0</version>
  <description>Calculator service interface</description>
  <maintainer email="nidhin@todo.todo">nidhin</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>